# ecclab

./: .gitignore  CMakeLists.txt  Makefile  README.md
Octave/: loadsrf.c  ui_octave_txt.c
common/: count_ops.h  crc.c  crc.h  spf_par.c  spf_par.h  srm_utils.c  srm_utils.h  std_defs.h  typedefs.h  ui_txt.c
dtrm/: dtrm0.c  dtrm1.c
dtrm_glp/: dtrm_glp_inner.c  dtrm_glp_inner.h  dtrm_glp_main.c
formats/: format_eps5.h  format_rho1.h  format_rho5.h  formats.h
interfaces/: codec.h  simul.h  ui_utils.h
polar_scl/: ca_polar_scl_main.c  polar_scl_inner.c  polar_scl_inner.h
rm1_ml/: rm1_ml.c  rm1_ml.h
simulators/: main_txt.c  sim_bg.c
tests/: test_ca_polar_scl.c  test_crc.c  test_dtrm0.c
work/: bg_polar08_ca8_CF_k128_L8.spf  bg_rm0204_dtrm0.spf  bg_rm0204_dtrm_glp_P1_L1.spf  bg_rm0204_dtrm_glp_P1_L2.spf  bg_rm0207_dtrm0.spf  bg_rm0207_dtrm1.spf  bg_rm0208_dtrm_glp_P1_L256.spf  bg_rm0208_dtrm_glp_Pcyclic_L128.spf  bg_rm0208_dtrm_glp_PmCr_L256.spf  bg_rm0308_dtrm_glp_P1_L256.spf  bg_rm0308_dtrm_glp_Pcyclic_L256.spf  bg_rm0308_dtrm_glp_PmCr_L256.spf  bg_rm0308_trFFD806_dtrm_glp_L32.spf  bg_rm0408_dtrm_glp_P1_L256.spf  bg_rm0408_dtrm_glp_Pcyclic_L256.spf  bg_rm0408_dtrm_glp_PmCr_L256.spf  bg_rm0508_dtrm_glp_P1_L64.spf  bg_rm0508_dtrm_glp_Pcyclic_L64.spf  bg_rm0508_dtrm_glp_PmCr_L64.spf
work/codes/polar/: polar08_ca8_CF_k128.txt
work/codes/rm/: p08cyclic.txt  p09cyclic.txt  rm0204.txt  rm0207.txt  rm0207_PmCr.txt  rm0208.txt  rm0208_PmCr.txt  rm0209.txt  rm0209_PmCr.txt  rm0307.txt  rm0307_PmCr.txt  rm0308.txt  rm0308_PmCr.txt  rm0309.txt  rm0309_PmCr.txt  rm0407.txt  rm0408.txt  rm0408_PmCr.txt  rm0409.txt  rm0409_PmCr.txt  rm0508.txt  rm0508_PmCr.txt  rm0509.txt  rm0509_PmCr.txt  rm0609.txt  rm0609_PmCr.txt
work/codes/srm/: rm0308_trFFD806.txt
